--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div class="profile">  <!-- profile -->
                 <img src="img/perfil.jpeg" alt="" class="img-fluid rounded-circle">
-                <h1 class="text-light">Gustavo Mota</h1>
+                <h1 class="text-light">Matheus O</h1>
 
                 <div class="social-links mt-3 text-center"> <!-- Social Links -->
 
@@ -141,7 +141,7 @@
         </section> <!-- Fim Sobre -->
 
         <!--  FEITOS -->
-        <section id="fact" class="facts"> 
+        <section id="facts" class="facts"> 
             <div class="container">
 
                 <div class="section-title">
@@ -191,12 +191,33 @@
 
 </div>
                 </div> <!-- Fim No-Gutters -->
-
-
-
             </div><!-- Fim container -->
         </section> <!-- Fim Feitos -->
       
+        <section id="skills" class="skills"></section>
+            <div class="section-title">
+                <h2>habilidades</h2> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus atque cum obcaecati! Ullam vel quasi laboriosam aut illo quis reprehenderit repellendus ex vero temporibus obcaecati voluptas dolorum, mollitia voluptatibus soluta!</p>
+            </div>
+            <div class="row skills-content">
+
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100"> 
+
+                <div class="progress">
+                    <span class="skill">HTML <i class="val">100%</i></span>
+                    <div class="progress-bar-wrap">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div><!-- Fim progress 1 -->
+            </div> <!-- Fim fade up1 -->
+
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300"> 
+
+            </div><!-- Fim fade up2 -->
+
+
+            </div>
+
     </main> <!-- Fim Main -->
 
         
