--- a/index.html
+++ b/index.html
@@ -660,7 +660,11 @@
                                 <label for="mensage"> digite a sua mensagem: *</label>
                                 <textarea name="mensage" class="form-control" cols="30" rows="10"></textarea>
                             </div>
-
+                            <div class="my-3">
+                                <div class="loading">carregando</div>
+                                <div class="error-message">Erro sua mensagem nao foi enviada</div>
+                                <div class="send-message">enviada com susseco</div>
+                            </div>
                         <div class="text-center"> <button type="submit">Enviar</button> </div>
 
                         </form>
